<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_shield_logo"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_applications"
        android:icon="@drawable/ic_wifi"
        android:title="@string/nav_applications" />
    <item
        android:id="@+id/nav_rules"
        android:icon="@drawable/ic_block"
        android:title="@string/nav_rules" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_check"
        android:title="@string/nav_logs" />
    <item
        android:id="@+id/nav_dns"
        android:icon="@drawable/ic_shield_logo"
        android:title="@string/nav_dns" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_shield_logo"
        android:title="@string/nav_settings" />
</menu>
